styles/HomePage.scss
.homeWrapper {
  background-color: #292d35;
  color: #292d35;
}

.homePageBanner {
  margin: 0px;
  position: relative;
  .homePageBannerSearch {
    position: absolute;
    z-index: 1;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    .homePageBannerSearchBox {
      width: 100%;
      height: 70px;
      background-color: #000;
      opacity: 0.75;
      color: #fff;
    }
  }
}

.search-title {
  color: #292d35;
  text-align: center;
}

.clip {
 display: block;
 height: 54vh;
 min-height: 450px;
}

.fullscreen-bg {
    overflow: hidden;
    z-index: -100;
    width: 100%;
    height: 100%;
}

.fullscreen-bg__video {
    position: fixed;
    min-width: 100%;
    min-height: 100%;
}

.eventImg {
  width: 100%;
  display: block;
  margin-top: auto;
  margin-bottom: auto;
}

.eventContainer {
  max-width: 1500px;
  margin-right: auto;
  margin-left: auto;
  .event {
    height: 500px;
    padding: 15px;
    box-sizing: border-box;
    .imgContainer {
      height: 40%;
      overflow: hidden;
      border-radius: 0.3em 0.3em 0em 0em;
    }
    .eventDescription {
      border-radius: 0em 0em 0.3em 0.3em;
      background: #f8f9fa;
      height: 60%;
      padding: 10px 15px;
      .hostAndDetailButton {
        margin-top: 50px;
        .buttonWrap {
          position: relative;
          padding: 0;
          button {
            position: absolute;
            top: 50%;
            left: 50%;
            transform: translate(-50%, -50%);
          }
        }

        .avatarImg {
          height: 70px;
          border-radius: 50%;
        }
        .hostDetail {
          padding-left: 25px;
          p {
            position: absolute;
            top: 50%;
            transform: translateY(-50%);
          }
        }
      }
    }
  }
}

